<resources>
    <string name="app_name">My App Portfolio</string>
<string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_nanoApp_name_label">My Nanodegree Apps!</string>
    <string name="spotify_streamer_btn">SPOTIFY STREAMER</string>
    <string name="score_app_btn">SCORES APP</string>
    <string name="library_app_btn">LIBRARY APP</string>
    <string name="build_it_bigger_btn">BUILD IT BIGGER</string>
    <string name="xyz_reader_btn">XYZ READER</string>
    <string name="capstone_btn">CAPSTONE: MY OWN APP</string>
    <string name="spotify_message">This button will launch my Spotify Streamer!</string>
    <string name="score_message">This button will launch my Score App!</string>
    <string name="library_message">This button will launch my Library App!</string>
    <string name="build_it_bigger_message">This button will launch my Build It Bigger App!</string>
    <string name="xyz_reader_message">This button will launch my XYZ Reader App!</string>
    <string name="capstone_message">This button will launch my Capstone App!</string>
</resources>
