<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"

                tools:context=".MainActivity"
              android:background="#ff76fcff">

    <TextView
        android:text="@string/my_nanoApp_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="24dp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp">


        <Button
            android:id="@+id/spotify_btn_id"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:padding="22dp"
            android:layout_gravity="center"
            android:text="@string/spotify_streamer_btn"
            android:layout_marginBottom="5dp"
            android:background="#F08C35"
            android:onClick="sendMessage"/>
        <Button
            android:id="@+id/score_btn_id"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:padding="22dp"
            android:layout_gravity="center"
            android:text="@string/score_app_btn"
            android:layout_marginBottom="5dp"
            android:background="#F08C35"
            android:onClick="sendMessage"/>
        <Button
            android:id="@+id/library_btn_id"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:padding="22dp"
            android:layout_gravity="center"
            android:text="@string/library_app_btn"
            android:layout_marginBottom="5dp"
            android:background="#F08C35"
            android:onClick="sendMessage"/>
        <Button
            android:id="@+id/build_it_bigger_btn_id"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:padding="22dp"
            android:layout_gravity="center"
            android:text="@string/build_it_bigger_btn"
            android:layout_marginBottom="5dp"
            android:background="#F08C35"
            android:onClick="sendMessage"/>
        <Button
            android:id="@+id/xyz_reader_btn_id"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:padding="22dp"
            android:layout_gravity="center"
            android:text="@string/xyz_reader_btn"
            android:layout_marginBottom="5dp"
            android:background="#F08C35"
            android:onClick="sendMessage"/>
        <Button
            android:id="@+id/capstone_btn_id"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:padding="22dp"
            android:layout_gravity="center"
            android:text="@string/capstone_btn"
            android:background="#ffff0a16"
            android:onClick="sendMessage"
            />
    </LinearLayout>


</LinearLayout>
